--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -1,21 +1,44 @@
 @media print
-   {
-    @page {
-        size: A4;
-    }
-    body {
-       font-size: 12pt;
-    }
-
-    img.avatar {
-        filter: grayscale(1);
-        -webkit-filter: greyscale(1);
-    }
-   .main-wrapper .time {
-       float: right;
-        color: black !important;
-        -webkit-print-color-adjust: exact; 
+{
+   @page {
+      size: A4;
    }
+
+   body {
+      font-size: 11pt;
+   }
+
+   hr {
+      border-color: black !important;
+   }
+   
+   .main-wrapper {
+      .job-title, .course-title, .degree {
+         color: black !important;
+         font-size: 12pt;
+      }
+      .time {
+         position: static;
+         display: block;
+         margin-top: 5px;
+         color: black !important;
+         font-size: 9pt;
+      }
+      .company, .university, .institute {
+         color: black !important;
+         font-size: 12pt;
+      }
+   }
+
+   img.avatar {
+      filter: grayscale(1);
+      -webkit-filter: greyscale(1);
+   }
+   .sidebar-wrapper {
+      position: static;
+      width: inherit;
+  }
+
    .sidebar-wrapper {
       position: static;
       float: right;
@@ -36,13 +59,13 @@
        display: none;
    }
 
-    footer {
-       display: none;
-    }
+   footer {
+      display: none;
+   }
 
-    .skillset .level-bar-inner {
-       background-color: black !important;
-       -webkit-print-color-adjust: exact; 
-    }
+   .skillset .level-bar-inner {
+      background-color: black !important;
+      -webkit-print-color-adjust: exact; 
+   }
 
 }
