--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -12,17 +12,16 @@
 
     .main-wrapper {
         padding: 30px;
+        .time {
+            position: static;
+            display: block;
+            margin-top: 5px;
+        }
+        .upper-row {
+            margin-bottom: 0;
+        }
     }
 
-    .main-wrapper .time {
-        position: static;
-        display: block;
-        margin-top: 5px;
-    }
-
-    .main-wrapper .upper-row {
-        margin-bottom: 0;
-    }
 
 }
 
@@ -32,15 +31,15 @@
 
 /* Small devices (tablets, 768px and up) */
 @media (max-width: 992px) {
-
-    .main-wrapper .time {
-        position: static;
-        display: block;
-        margin-top: 5px;
-    }
-
-    .main-wrapper .upper-row {
-        margin-bottom: 0;
+    .main-wrapper {
+        .time {
+            position: static;
+            display: block;
+            margin-top: 5px;
+        }
+        .upper-row {
+            margin-bottom: 0;
+        }
     }
 
 }
